add github workflow

--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="HTML5"
+name="ice-and-fire-html"
 platform="HTML5"
 runnable=true
 custom_features=""
@@ -35,7 +35,7 @@ progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 [preset.1]
 
-name="Windows Desktop"
+name="ice-and-fire-windows-64bit"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -77,7 +77,7 @@ application/trademarks=""
 
 [preset.2]
 
-name="Mac OSX"
+name="ice-and-fire-macos"
 platform="Mac OSX"
 runnable=true
 custom_features=""
@@ -110,7 +110,7 @@ texture_format/etc2=false
 
 [preset.3]
 
-name="Linux/X11"
+name="ice-and-fire-linux"
 platform="Linux/X11"
 runnable=true
 custom_features=""
