--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -26,6 +26,7 @@ jobs:
           godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.4.2/mono/Godot_v3.4.2-stable_mono_linux_headless_64.zip
           godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.4.2/mono/Godot_v3.4.2-stable_mono_export_templates.tpz
           relative_project_path: ./godot
+          base_version: '0.1.0'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_CREDENTIALS }}
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
